--- a/index.html
+++ b/index.html
@@ -5,19 +5,51 @@
 
     <title>css selectors</title>
     <style>
-        *{
-            color: green;
-            font-size: 50px;
+        /*universal selector*/
+        /**{*/
+        /*    color: green;*/
+        /*    font-size: 50px;*/
+        /*}*/
+        /*type selector*/
+        /*h1{*/
+        /*    color: red;*/
+        /*    font-size: 20px;*/
+        /*}*/
+    /*    id selector*/
+    /*    #myh{*/
+    /*        color: blue;*/
+    /*    }*/
+
+    /*    pseudo selectors*/
+
+    /*    pseudo classes - */
+        li:first-child{
+            color:red;
+        }
+        li:hover :last-child{
+            color:aqua;
+        }
+        li:nth-child(2){
+            color: aqua;
         }
     </style>
 </head>
 <body>
 <header>
-    <h1 style="">Hello CSS</h1>
+    <h1 id="myh">Hello CSS</h1>
     <br>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad doloribus ea et illo iure labore maxime optio
         repellendus reprehenderit voluptates! Animi assumenda cupiditate eum facere labore laudantium mollitia, quia
         quidem!</p>
+
+    <h1>hi h</h1>
+    <ul>
+        <li>first</li>
+        <li>second</li>
+        <li>third</li>
+        <li>fourth</li>
+        <li>fifth</li>
+    </ul>
 </header>
 <main>
 
