--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     /*    pseudo selectors*/
 
-    /*    pseudo classes - */
+    /*    pseudo classes - SELECT ACCORDING TO THE ELEMENT STATE */
         li:first-child{
             color:red;
         }
