added sudo classes

--- a/index.html
+++ b/index.html
@@ -32,17 +32,40 @@
         li:nth-child(2){
             color: aqua;
         }
+
+        p::first-letter{
+            color:aquamarine;
+            font-size: 50px;
+        }
+        p::selection{
+            background-color: darkgreen;
+            font-size: 100px;
+            color: aqua;
+        }
+
+
+
     </style>
 </head>
 <body>
 <header>
     <h1 id="myh">Hello CSS</h1>
     <br>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad doloribus ea et illo iure labore maxime optio
-        repellendus reprehenderit voluptates! Animi assumenda cupiditate eum facere labore laudantium mollitia, quia
-        quidem!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci aspernatur autem cupiditate,
+        deserunt dolorum ex fugiat iure laborum laudantium molestias, nam omnis pariatur porro provident, quae sapiente
+        veritatis voluptates!</p>
 
-    <h1>hi h</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci aspernatur autem cupiditate,
+        deserunt dolorum ex fugiat iure laborum laudantium molestias, nam omnis pariatur porro provident, quae sapiente
+        veritatis voluptates!</p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci aspernatur autem cupiditate,
+        deserunt dolorum ex fugiat iure laborum laudantium molestias, nam omnis pariatur porro provident, quae sapiente
+        veritatis voluptates!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci aspernatur autem cupiditate,
+        deserunt dolorum ex fugiat iure laborum laudantium molestias, nam omnis pariatur porro provident, quae sapiente
+        veritatis voluptates!</p>
+    <h1>hi</h1>
     <ul>
         <li>first</li>
         <li>second</li>
