--- a/index.html
+++ b/index.html
@@ -45,13 +45,17 @@
     /*    li{*/
     /*        list-style: lower-greek;*/
     /*    }*/
-    /*css combinators*/
-        header h1{
-            color : darkblue;
-            background-color: lawngreen ;
+    /*css combinators - use to combine different css selectors and select*/
+    /*    descendent combinators*/
+    /*    header h1{*/
+    /*        color : darkblue;*/
+    /*        background-color: lawngreen ;*/
+    /*    }*/
+
+    /*child combinator - direct child*/
+        body > h1{
+            color: blueviolet;
         }
-
-
 
     </style>
 </head>
